# ece490-s2016

./: .gitignore  README.md  ubl
Human_Interaction/Group2Helper/: apc.py  bin_select.py  json_parser_pick.py  json_parser_stow.py
Human_Interaction/Integration/: CustomGLViewer.py  TODO:  armRecorder.py  baxterSupply.py  baxterSupplyLoop.py  data.json  getAverageTimes.py  getTimes.sh  imageTest.py  motionController.py  motionController.py~
Human_Interaction/JSON_FILES/: interface_generator_2016.py
Human_Interaction/Motion/: config.py  motion.py  motion.py~  motion_server_physical.cpp
Human_Interaction/Sensors/: Pressure_Comms.py  pressureReading_LEFT.pkl  scale.py
Human_Interaction/Testing/: cartesian_pose_control.py~
Human_Interaction/Trajectories/: Human_Testing  Human_Testing.py  camera_to_bin.py  grasp_to_stow_90.py
Human_Interaction/klampt_models/: Realsense_Mount_Centered_Mirror.STL  baxter_col.rob  baxter_new_spatula_rest.config  baxter_with_two_vacuums.rob  leftvacuum.rob  plane1.env  plane2.env  plane3.env  spatula_new.rob
apc2015/: .gitignore
apc2015/apc/: apc.py  baxter.py  baxter_parallel_jaw.py  baxter_reflex.py  baxter_scoop.py  grasp_editor.py  item_grasp_demo.py  motion.py  path_computer.py  perception_fake.py  picking.py  planner.py  point_cloud_grasp_planner.py  simulator.py
apc2015/api/: control.py  perception.py  planning.py  shared.py
apc2015/calibration_new/: 0.pcd  1.pcd  10.pcd  11.pcd  13.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
apc2015/hardware_layer/: CMakeLists.txt  open_gripper.py  sag_calibration_test.py  send_motion.py  widget_control.py
apc2015/hardware_layer/Sensors/: realsense_ros_emitter.cpp
apc2015/hardware_layer/reflex-sf-apc/reflex_sf/src/: reflex_sf_hand.py
apc2015/homework/: apc.py  baxter.py  hw1.py  hw2.docx  hw2.py  hw2_impl.py  hw2_impl_fixed.py  hw4.docx  hw4.py  hw4_impl.py  hw4_planner.py  hw4_planner_impl.py
apc2015/hw2_submissions/: AndrewH_HW2.py  apc.py  hw2_ben_burchfiel.py  hw2_brenton_keller.py  hw2_greg_mckeon.py  hw2_hk94.py  hw2_kaighn_kelvin.py  hw2_miles_aubert.py  hw2_miles_oldenburg.py  hw2_mtd13.py  hw2_yilun_zhou.py
apc2015/integration/: control_server.py  jobs.py  master.py  perception.py  perception_server.py  planning.py  planning_server.py  remote.py  shared.py  visualization.py
apc2015/kb/: Object Dimensions.csv  bin_bounds.json  bin_vantage_points.json  generate_bin_bounds.py  generate_bin_bounds_amazon.py  generate_vantage_points.py  (+4 more)
apc2015/perception/PointCloudUtils/: CMakeLists.txt  pc_process.cpp  pc_view.cpp  temp.pcd
apc2015/perception/archive/: CMakeLists.txt  PCLIO  PointCloud2Subscriber  demo.pcd  demo2.pcd  normals.txt  pcl_io_normal.cpp  point_cloud_subscriber.cpp  visualize.py
apc2015/perception/archive/RealSensePCD/: CMakeLists.txt  realsense_ros_emitter_with_pcl.cpp
apc2015/perception/archive/cloud_conversion/: #point_cloud_subscriber.cpp#  CMakeLists.txt  point_cloud_subscriber.cpp
apc2015/perception/archive/pcl_icp/: .cproject  .project
apc2015/perception/archive/pcl_icp/Debug/: subdir.mk
apc2015/perception/archive/pcl_icp/src/: CMakeLists.txt  convert2pcl.cpp
apc2015/perception/archive/pcl_msgs_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
apc2015/perception/archive/pcl_msgs_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
apc2015/perception/archive/pcl_msgs_ws/devel/include/pcl_msgs/: ModelCoefficients.h  PointIndices.h  PolygonMesh.h  Vertices.h
apc2015/perception/archive/pcl_msgs_ws/devel/share/common-lisp/ros/pcl_msgs/msg/: ModelCoefficients.lisp  PointIndices.lisp  PolygonMesh.lisp  _package.lisp  pcl_msgs-msg.asd
apc2015/perception/archive/point_cloud_data/: data_rgb.pcd
apc2015/perception/archive/ros_pcl/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
apc2015/perception/archive/ros_pcl/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
apc2015/perception/icp_new/: CMakeLists.txt  icp_new.cpp
apc2015/perception/single_utils/: .gitignore  CMakeLists.txt  visualize_two_clouds.py
apc2015/perception/single_utils/src/: brighten_cloud.py  common_utils.py  generate_color_histogram.py  generate_naive_cloud.py  generate_pcd.py  icp.cpp  icp_new.cpp  kmean_segmentation.py  locate_center_of_order_bin.py  pcl_write_normals.cpp  ply_to_pcd.cpp  post_process_pcd.py  remove_all_sides.py  segmentation.cpp  senz3d.cpp  sliding_window_back_removal.py  sliding_window_bottom_top_removal.py  sliding_window_side_removal.py  visualize_one_cloud.py  write_image.py  write_pcd_file.cpp
apc2016/: Arduino_Access_Script
common/: CMakeLists.txt  RealSense_ROS_Emitter
common/Motion/: config.py  motion.h  motion.py  motion_client.cpp  motion_common.h  motion_kinematic.cpp  motion_physical.cpp  motion_server.cpp  motion_state.h  motion_visualizer.py
common/Perception/: calibrate.py
common/SSPP/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.txt  cmake_install.cmake  cmake_uninstall.cmake
common/SSPP/Python/sspp/: service.py  spiffy.py  structure_service.py  topic.py
common/SSPP/include/sspp/: Service.h  Topic.h
common/SSPP/services/: EchoService  HeartbeatService  LogService  SendService
common/SSPP/src/services/: echo_service.cpp  log_service.cpp
common/SSPP/src/sspp/: Service.cpp  Spiffy.cpp  Topic.cpp
common/Sensors/: README.txt  multiScale.py  realsense_ros_emitter.cpp  scale.py  testScale.py
common/Sensors/RealSenseService/: realsense_service.cpp
common/Testing/: GamePad_noGUI.py  arm_motion_playback.py  arm_motion_record.py  motion_testing.py  simpletest.py  testScale.py  testScaleMulti.py  widget_control.py
common/klampt_models/: ebolabot_baxter_torso_col.rob  ebolabot_col.rob  hstar_amp1.rob  hstar_amp1_col.rob  reflex_col.py  rethink_electric_gripper.rob
common/klampt_models/baxter/: pedestal.tri  torso.tri
common/klampt_models/reflex/: base_link.tri  pad.tri  swivel_2.tri
figure/: Readme
group2/: APC2015_CodeReview.txt  README.txt
group3/: .gitignore  o
(+2783 files in other folders)
